opam-version: "1.2"
maintainer: "thomas@gazagnaire.org"
authors: [ "Louis Gesbert" "Thomas Gazagnaire" ]
license: "ISC"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "sexplib"
  "ppx_sexp_conv" {build}
  "jbuilder" {build & >= "1.0+beta9"}
]
dev-repo: "git://github.com/mirage/ocaml-lazy-trie"
homepage: "https://github.com/mirage/ocaml-lazy-trie"
bug-reports: "https://github.com/mirage/ocaml-lazy-trie/issues"
