opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [ "Louis Gesbert" "Thomas Gazagnaire" ]
license: "ISC"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "sexplib"
  "ppx_sexp_conv" {build}
  "dune" {build & >= "1.0"}
]
dev-repo: "git://github.com/mirage/ocaml-lazy-trie"
homepage: "https://github.com/mirage/ocaml-lazy-trie"
bug-reports: "https://github.com/mirage/ocaml-lazy-trie/issues"
synopsis: "Implementation of lazy prefix trees"
description: "Implementation of lazy prefix trees"
